--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-﻿Hello World 
-<!--email_off-->23f3002391@ds.study.iitm.ac.in<!--/email_off--> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hello Page</title>
+</head>
+<body>
+  <h1>Hello World</h1>
+  <!--email_off-->23f3002391@ds.study.iitm.ac.in<!--/email_off-->
+</body>
+</html>
